Add in the fugitive profile screen and made some adjustment to support the feature